# keras-rs

./: .gitignore  LICENSE  README.md  RELEASE_PROCESS.md  SECURITY.md  api_gen.py  pip_build.py  pyproject.toml  requirements-common.txt  requirements-jax-cuda.txt  requirements-tensorflow-cuda.txt  requirements-torch-cuda.txt  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: actions.yml  nightly.yml  publish-to-pypi.yml
.github/workflows/scripts/: auto-assignment.js
examples/: basic_ranking.py  basic_retrieval.py  data_parallel_retrieval.py  dcn.py  deep_recommender.py  listwise_ranking.py  multi_task.py  sas_rec.py  scann.py  sequential_retrieval.py
keras_rs/: __init__.py
keras_rs/api/: __init__.py
keras_rs/api/layers/: __init__.py
keras_rs/api/losses/: __init__.py
keras_rs/api/metrics/: __init__.py
keras_rs/src/: api_export.py  types.py  version.py
keras_rs/src/layers/embedding/: __init__.py  base_distributed_embedding.py  distributed_embedding_config.py  distributed_embedding_test.py  embed_reduce.py  embed_reduce_test.py  test_utils.py
keras_rs/src/layers/embedding/jax/: config_conversion.py  config_conversion_test.py  distributed_embedding.py  distributed_embedding_test.py  embedding_lookup.py  embedding_lookup_test.py  embedding_utils.py  test_utils.py
keras_rs/src/layers/embedding/tensorflow/: config_conversion.py  distributed_embedding.py
keras_rs/src/layers/feature_interaction/: dot_interaction.py  dot_interaction_test.py  feature_cross.py  feature_cross_test.py
keras_rs/src/layers/modeling/: dot_interaction.py  dot_interaction_test.py  feature_cross.py  feature_cross_test.py
keras_rs/src/layers/retrieval/: brute_force_retrieval.py  brute_force_retrieval_test.py  hard_negative_mining.py  hard_negative_mining_test.py  remove_accidental_hits.py  remove_accidental_hits_test.py  retrieval.py  retrieval_test.py  sampling_probability_correction.py  sampling_probability_correction_test.py
keras_rs/src/losses/: pairwise_hinge_loss.py  pairwise_hinge_loss_test.py  pairwise_logistic_loss.py  pairwise_logistic_loss_test.py  pairwise_loss.py  pairwise_loss_utils.py  pairwise_mean_squared_error.py  pairwise_mean_squared_error_test.py  pairwise_soft_zero_one_loss.py  pairwise_soft_zero_one_loss_test.py
keras_rs/src/metrics/: dcg.py  dcg_test.py  mean_average_precision.py  mean_average_precision_test.py  mean_reciprocal_rank.py  mean_reciprocal_rank_test.py  ndcg.py  ndcg_test.py  precision_at_k.py  precision_at_k_test.py  ranking_metric.py  ranking_metrics_utils.py  recall_at_k.py  recall_at_k_test.py  utils.py
keras_rs/src/testing/: __init__.py  test_case.py
keras_rs/src/utils/: doc_string_utils.py  keras_utils.py  pairwise_loss_utils.py
shell/: api_gen.sh  format.sh  lint.sh
