[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keras-rs"
authors = [
    {name = "Keras RS team", email = "keras-rs@google.com"},
]
description = "Multi-backend recommender systems with Keras 3."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache License 2.0"}
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
dependencies = [
    "keras",
]

[project.urls]
Home = "https://keras.io/"
Repository = "https://github.com/keras-team/keras-rs"

[tool.setuptools.dynamic]
version = {attr = "keras_rs.src.version.__version__"}

[tool.setuptools.packages.find]
include = ["keras_rs", "keras_rs.*"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # isort
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # imported but unused

[tool.ruff.lint.isort]
force-single-line = true
single-line-exclusions = ["typing"]
known-first-party = ["keras_rs"]

[tool.mypy]
strict = "True"
exclude = ["_test\\.py$", "^examples"]
disable_error_code = ["import-untyped"]
disallow_subclassing_any = "False"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "-vv"
