[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keras-rs"
authors = [
    {name = "Keras team", email = "keras-users@googlegroups.com"},
]
description = "Multi-backend recommender systems with Keras 3."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache License 2.0"}
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
dependencies = [
    "keras",
    "ml-dtypes",
]

[project.urls]
Home = "https://keras.io/keras_rs"
Repository = "https://github.com/keras-team/keras-rs"

[tool.setuptools.dynamic]
version = {attr = "keras_rs.src.version.__version__"}

[tool.setuptools.package-dir]
 "" = "."
 "keras_rs" = "keras_rs/api"  # Remap api/ to the root of the package.
 "keras_rs.src" = "keras_rs/src"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # isort
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # imported but unused

[tool.ruff.lint.isort]
force-single-line = true
single-line-exclusions = ["typing"]
known-first-party = ["keras_rs"]

[tool.mypy]
strict = "True"
exclude = ["_test\\.py$", "^examples/"]
untyped_calls_exclude = ["ml_dtypes"]
disable_error_code = ["import-untyped", "unused-ignore"]
disallow_subclassing_any = "False"

[[tool.mypy.overrides]]
module = "keras_rs.api"
ignore_errors = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "-vv"
